# personal_site

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  input.css  package-lock.json  package.json  tailwind.config.js
.github/workflows/: deploy.yml
src/: about.rs  card_back.rs  card_front.rs  contact.rs  footer.rs  home.rs  main.rs  projects.rs  sidebar.rs
src/components/: box_segment.rs  mod.rs
