[package]
name = "personal_site_overhaul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.2", features = ["csr", "nightly"] }
leptos_icons = { version = "0.1.0", default_features = false, features = [
    "AiGithubFilled",
    "FaLinkedinBrands",
    "FaEnvelopeRegular",
    "BsArrowRight",
    "FaLocationDotSolid",
    "FaFileRegular",
    "FaCalendarDaysRegular"
]}
